# Opencode

./: .gitignore  .pii-allow  LICENSE  README.md  RUNNING_GUIDE.md  asr_benchmark_master_blueprint.md  handoff.md  pyproject.toml  requirements.txt  temp_report_for_pii_scan.md
.opencode/: gemini-review.md  handoff.md
Code/: agent.py  config.py  datasets.py  engines.py  main.py  mock_engine.py  writer.py
Code/asr_benchmark_harness.egg-info/: SOURCES.txt
Skills/: acquire_assets.py  check_no_pii.py  compute_wer_cer.py  gemini_escalation.py  manage_device.py  normalize_text.py  profile_audio.py  publish_report.py  setup_github.py
Specs/: AGENT_PLAN.md  REMEDIATION_PLAN.md  session-ses_0d1a.md  session-ses_0d1f.md  session-ses_0d20.md
asr_benchmark_harness.egg-info/: PKG-INFO  SOURCES.txt
reports/: INDEX.md  report_20260703_035247.md  report_20260704_204517.md
tests/: test_agent_tools.py  test_corpus_metrics.py  test_datasets.py  test_resiliency.py  test_skills.py
